fixed a few things, made it better on mobile, added esa sponsor

--- a/src/pages/home/sections/Menu.css
+++ b/src/pages/home/sections/Menu.css
@@ -12,11 +12,12 @@
     max-width: 100vw;
     
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .menu > * {
     transition-duration: 0.2s;
-    margin: 0px 10px;
+    margin: 10px 10px;
     font-size: calc(min(20px, 4vw));
 }
 
