--- a/src/pages/home/sections/Sections.css
+++ b/src/pages/home/sections/Sections.css
@@ -78,8 +78,10 @@
 
 .section-text-block {
     text-align: justify; /* Justify the text */
-    letter-spacing: calc((100% - 100vw) * 100);
-    width: 50vw;
+    /*letter-spacing: calc((100% - 100vw) * 100);*/
+    min-width: 50vw;
+    max-width: 500px;
+    width: 80vw;
     line-height: 1.2;
 }
 
@@ -106,4 +108,13 @@ p {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+}
+
+p > a {
+    color: rgb(172, 149, 149);
+    text-decoration: underline;
+}
+
+p > a:hover {
+    color: rgb(196, 147, 147);
 }
